option java_package = "com.google.framework.services";

message AndroidCheckinRequest {
    optional string imei = 1;
    optional int64 id = 2;
    optional string digest = 3;
    optional AndroidCheckinProto checkin = 4;
    optional string desiredBuild = 5;
    optional string locale = 6;
    optional int64 loggingId = 7;
    optional string marketCheckin = 8;
    repeated string macAddr = 9;
    optional string meid = 10;
    repeated string accountCookie = 11;
    optional string timeZone = 12;
    optional fixed64 securityToken = 13;
    optional int32 version = 14;
    repeated string otaCert = 15;
    optional string serialNumber = 16;
    optional string esn = 17;
    optional DeviceConfigurationProto deviceConfiguration = 18;
    repeated string macAddrType = 19;
    optional int32 fragment = 20;
    optional string userName = 21;
    optional int32 userSerialNumber = 22;
}
message AndroidCheckinResponse {
    optional bool statsOk = 1;
    repeated AndroidIntentProto intent = 2;
    optional int64 timeMsec = 3;
    optional string digest = 4;
    repeated GservicesSetting setting = 5;
    optional bool marketOk = 6;
    optional fixed64 androidId = 7;
    optional fixed64 securityToken = 8;
    optional bool settingsDiff = 9;
    repeated string deleteSetting = 10;
}
message GservicesSetting {
    optional bytes name = 1;
    optional bytes value = 2;
}
message DeviceConfigurationProto {
    optional int32 touchScreen = 1;
    optional int32 keyboard = 2;
    optional int32 navigation = 3;
    optional int32 screenLayout = 4;
    optional bool hasHardKeyboard = 5;
    optional bool hasFiveWayNavigation = 6;
    optional int32 screenDensity = 7;
    optional int32 glEsVersion = 8;
    repeated string systemSharedLibrary = 9;
    repeated string systemAvailableFeature = 10;
    repeated string nativePlatform = 11;
    optional int32 screenWidth = 12;
    optional int32 screenHeight = 13;
    repeated string systemSupportedLocale = 14;
    repeated string glExtension = 15;
    optional int32 maxApkDownloadSizeMb = 17;
}
message AndroidBuildProto {
    optional string id = 1;
    optional string product = 2;
    optional string carrier = 3;
    optional string radio = 4;
    optional string bootloader = 5;
    optional string client = 6;
    optional int64 timestamp = 7;
    optional int32 googleServices = 8;
    optional string device = 9;
    optional int32 sdkVersion = 10;
    optional string model = 11;
    optional string manufacturer = 12;
    optional string buildProduct = 13;
    optional bool otaInstalled = 14;
}
message AndroidCheckinProto {
    optional AndroidBuildProto build = 1;
    optional int64 lastCheckinMsec = 2;
    repeated AndroidEventProto event = 3;
    repeated AndroidStatisticProto stat = 4;
    repeated string requestedGroup = 5;
    optional string cellOperator = 6;
    optional string simOperator = 7;
    optional string roaming = 8;
    optional int32 userNumber = 9;
}
message AndroidEventProto {
    optional string tag = 1;
    optional string value = 2;
    optional int64 timeMsec = 3;
}
message AndroidIntentProto {
    optional string action = 1;
    optional string dataUri = 2;
    optional string mimeType = 3;
    optional string javaClass = 4;
    repeated group Extra = 5 {
        optional string name = 6;
        optional string value = 7;
    }
}
message AndroidStatisticProto {
    optional string tag = 1;
    optional int32 count = 2;
    optional float sum = 3;
}
message AndroidDataUsageProto {
    optional int32 version = 1;
    optional int64 currentReportMsec = 2;
    repeated KeyToPackageNameMapping keyToPackageNameMapping = 3;
    repeated PayloadLevelAppStat payloadLevelAppStat = 4;
    repeated IpLayerNetworkStat ipLayerNetworkStat = 5;
}
message AndroidUsageStatsReport {
    optional int64 androidId = 1;
    optional int64 loggingId = 2;
    optional UsageStatsExtensionProto usageStats = 3;
}
message AppBucket {
    optional int64 bucketStartMsec = 1;
    optional int64 bucketDurationMsec = 2;
    repeated StatCounters statCounters = 3;
    optional int64 operationCount = 4;
}
message CounterData {
    optional int64 bytes = 1;
    optional int64 packets = 2;
}
message IpLayerAppStat {
    optional int32 packageKey = 1;
    optional int32 applicationTag = 2;
    repeated AppBucket ipLayerAppBucket = 3;
}
message IpLayerNetworkBucket {
    optional int64 bucketStartMsec = 1;
    optional int64 bucketDurationMsec = 2;
    repeated StatCounters statCounters = 3;
    optional int64 networkActiveDuration = 4;
}
message IpLayerNetworkStat {
    optional string networkDetails = 1;
    optional int32 type = 2;
    repeated IpLayerNetworkBucket ipLayerNetworkBucket = 3;
    repeated IpLayerAppStat ipLayerAppStat = 4;
}
message KeyToPackageNameMapping {
    optional int32 packageKey = 1;
    optional string uidName = 2;
    repeated PackageInfo sharedPackageList = 3;
}
message PackageInfo {
    optional string pkgName = 1;
    optional int32 versionCode = 2;
}
message PayloadLevelAppStat {
    optional int32 packageKey = 1;
    optional int32 applicationTag = 2;
    repeated AppBucket payloadLevelAppBucket = 3;
}
message StatCounters {
    optional int32 networkProto = 1;
    optional int32 direction = 2;
    optional CounterData counterData = 3;
    optional int32 fgBg = 4;
}
message UsageStatsExtensionProto {
    optional AndroidDataUsageProto dataUsage = 1;
}